--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,19 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "BigFlowerFat",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.3",
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.12",
+    "path": "^0.12.7",
+    "sweetalert": "^2.1.2",
+    "toastr": "^2.1.4"
   }
 }
