--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
+    "nodemailer": "^4.6.8",
     "path": "^0.12.7",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4"
