--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ server/package-lock.json
 server/package.json
 server/package-lock.json
 server/package.json
+server/package-lock.json
+server/package.json
