--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.3",
-    "express": "^4.16.4",
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.4.1",
+    "mongoose": "^5.7.12",
     "nodemailer": "^4.7.0",
     "path": "^0.12.7",
     "sweetalert": "^2.1.2",
