--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.5.3",
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
+    "emailjs": "^2.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongodb": "^3.1.10",
